support Java 17 (#2)